# text-editor-rs

./: .gitignore  Cargo.toml  README.md
crates/text-buffer/: Cargo.toml  ipsum
crates/text-buffer/benches/: buffer.rs
crates/text-buffer/src/: lib.rs
src/: buffer.rs  document.rs  editor.rs  keymaps.rs  main.rs  terminal.rs
tests/: document  multiple_paragraphs  single_paragraph
