[package]
name = "texteditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
console = "0.15.8"
crossterm = "0.27.0"
log = "0.4.20"
structured-logger = "1.0.3"
unicode-width = "0.1.11"

[dev-dependencies]
test-case = "3.3.1"
